# DesignPatterns

ObserverPattern/: CMakeLists.txt  Readme.md  main.cpp
ObserverPattern/inc/: CurrentScreen.h  IObserver.h  ISubject.h  WeatherData.h
ObserverPattern/src/: CurrentScreen.cpp  WeatherData.cpp
